--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.24.1",
+    "@gorhom/bottom-sheet": "^5",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@viro-community/react-viro": "^2.41.1",
+    "@supabase/supabase-js": "^2.50.5",
+    "aes-js": "^3.1.2",
     "expo": "53.0.12",
     "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.1",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -31,6 +34,7 @@
     "expo-linking": "~7.1.5",
     "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.0",
+    "expo-secure-store": "~14.2.3",
     "expo-speech": "~13.1.7",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -41,15 +45,16 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.1"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/aes-js": "^3.1.4",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
