--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@supabase/supabase-js": "^2.50.5",
     "aes-js": "^3.1.2",
     "expo": "53.0.12",
-    "expo-av": "~15.1.6",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.1",
-    "expo-file-system": "~18.1.10",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -51,7 +51,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "lottie-react-native": "7.2.2"
+    "lottie-react-native": "7.2.2",
+    "expo-audio": "~0.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
